--- a/src/components/MobileApp/MobileAppHero.module.css
+++ b/src/components/MobileApp/MobileAppHero.module.css
@@ -1,16 +1,17 @@
 .catapultArm {
-  animation: catapultArm 5s cubic-bezier(0.34, 1.56, 0.64, 1) infinite;
+  animation: catapultArm 4s cubic-bezier(0.34, 1.56, 0.64, 1) infinite;
   backface-visibility: hidden;
 }
 
 .phoneLaunch {
-  animation: phoneTrajectory 5s cubic-bezier(0.25, 0.1, 0.25, 1) infinite;
+  animation: phoneTrajectory 4s cubic-bezier(0.25, 0.8, 0.3, 1) infinite;
   transform-origin: 120px 110px;
   backface-visibility: hidden;
+  will-change: transform, opacity;
 }
 
 .motionLines {
-  animation: motionStreak 5s ease-out infinite;
+  animation: motionStreak 4s ease-out infinite;
 }
 
 .paused {
@@ -45,126 +46,50 @@
   0%,
   35% {
     opacity: 0;
-    transform: translate(0, 0) rotate(0deg) scale(1);
-  }
-  36% {
-    opacity: 1;
-    transform: translate(3px, -5px) rotate(-2deg) scale(0.995);
-  }
-  37% {
-    opacity: 1;
-    transform: translate(6px, -10px) rotate(-4deg) scale(0.998);
-  }
-  38% {
-    opacity: 1;
-    transform: translate(10px, -15px) rotate(-5deg) scale(0.998);
-  }
-  39% {
-    opacity: 1;
-    transform: translate(15px, -23px) rotate(-7deg) scale(0.997);
+    transform: translate3d(0, 0, 0) rotate(-8deg) scale(1);
   }
   40% {
-    opacity: 1;
-    transform: translate(22px, -32px) rotate(-10deg) scale(0.98);
-  }
-  42% {
-    opacity: 1;
-    transform: translate(35px, -48px) rotate(-14deg) scale(0.985);
-  }
-  44% {
-    opacity: 1;
-    transform: translate(50px, -62px) rotate(-18deg) scale(0.987);
-  }
-  46% {
-    opacity: 1;
-    transform: translate(65px, -74px) rotate(-21deg) scale(0.988);
-  }
-  48% {
-    opacity: 1;
-    transform: translate(80px, -84px) rotate(-25deg) scale(0.99);
+    opacity: 0.95;
+    transform: translate3d(10px, -14px, 0) rotate(-10deg) scale(1);
   }
   50% {
     opacity: 1;
-    transform: translate(95px, -92px) rotate(-27deg) scale(0.991);
-  }
-  52% {
-    opacity: 1;
-    transform: translate(110px, -98px) rotate(-30deg) scale(0.992);
-  }
-  54% {
-    opacity: 1;
-    transform: translate(125px, -100px) rotate(-32deg) scale(0.992);
-  }
-  56% {
-    opacity: 1;
-    transform: translate(140px, -100px) rotate(-33deg) scale(0.993);
-  }
-  58% {
-    opacity: 1;
-    transform: translate(154px, -100px) rotate(-34deg) scale(0.994);
+    transform: translate3d(70px, -90px, 0) rotate(-16deg) scale(1);
   }
   60% {
     opacity: 1;
-    transform: translate(168px, -100px) rotate(-33deg) scale(0.995);
+    transform: translate3d(140px, -135px, 0) rotate(-14deg) scale(1);
   }
-  62% {
-    opacity: 1;
-    transform: translate(180px, -100px) rotate(-31deg) scale(0.996);
-  }
-  64% {
-    opacity: 1;
-    transform: translate(191px, -100px) rotate(-28deg) scale(0.997);
-  }
-  66% {
-    opacity: 1;
-    transform: translate(200px, -100px) rotate(-24deg) scale(0.998);
-  }
-  68% {
-    opacity: 1;
-    transform: translate(208px, -100px) rotate(-19deg) scale(0.999);
-  }
-  70% {
-    opacity: 1;
-    transform: translate(215px, -100px) rotate(-13deg) scale(1);
-  }
-  75% {
-    opacity: 1;
-    transform: translate(230px, -100px) rotate(-2deg) scale(1);
-  }
-  80% {
-    opacity: 1;
-    transform: translate(242px, -100px) rotate(0deg) scale(0.99);
-  }
-  85% {
+  72% {
     opacity: 0.8;
-    transform: translate(251px, -100px) rotate(2deg) scale(0.97);
+    transform: translate3d(210px, -115px, 0) rotate(-4deg) scale(1);
   }
-  90% {
-    opacity: 0.5;
-    transform: translate(258px, -100px) rotate(3deg) scale(0.95);
+  82% {
+    opacity: 0.55;
+    transform: translate3d(255px, -90px, 0) rotate(0deg) scale(1);
   }
-  95% {
+  92% {
     opacity: 0.2;
-    transform: translate(265px, -100px) rotate(4deg) scale(0.93);
+    transform: translate3d(285px, -70px, 0) rotate(8deg) scale(1);
   }
   100% {
     opacity: 0;
-    transform: translate(280px, -100px) rotate(5deg) scale(0.9);
+    transform: translate3d(300px, -60px, 0) rotate(10deg) scale(1);
   }
 }
 
 @keyframes motionStreak {
   0%,
-  35% {
+  44% {
     opacity: 0;
   }
-  38% {
+  52% {
     opacity: 0.3;
   }
-  65% {
+  72% {
     opacity: 0.5;
   }
-  85% {
+  92% {
     opacity: 0;
   }
   100% {
